Back end do módulo de preços finalizado